--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -634,8 +634,19 @@ input::-moz-placeholder {
         z-index: -1;
     }
 
+    .js-desktop-video.only-mobile {
+        min-width: 360px;
+        width: 100%;
+    }
+
     video {
         object-fit: cover;
+    }
+
+    .js-desktop-video.only-mobile {
+        video {
+            display: none;
+        }
     }
 }
 
